--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1141,6 +1141,61 @@
         </div>
     </details>
 </section>
+                <!-- ALTINCI BÖLÜM: Toplantı ve Örgütlenme Hürriyetleri -->
+<section aria-labelledby="bolum-toplanti-orgutlenme">
+    <h3 id="bolum-toplanti-orgutlenme" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        ALTINCI BÖLÜM: Toplantı ve Örgütlenme Hürriyetleri
+    </h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölüm, bireylerin bir araya gelerek ortak amaçlar doğrultusunda örgütlenme ve ifade özgürlüğünü kullanma hakkını kapsar. Dernek kurma, toplantı yapma ve gösteri yürüyüşü düzenleme gibi haklar, demokratik katılımın temel taşlarıdır. Sınavda en çok <strong>usul kuralları</strong>, <strong>istisnalar</strong> ve <strong>idari müdahale sınırları</strong> sorulur.
+    </p>
+
+    <!-- Madde 33 -->
+    <details id="madde-33" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 33 – Dernek Kurma Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>dernek kurma</strong> hakkına sahiptir. Dernek kurmak için önceden izin alınmaz. Ancak kanunla suç teşkil eden amaç ve faaliyetlerle dernek kurulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Derneklerin faaliyetlerinin durdurulması ve <strong>kapatılması ancak hâkim kararıyla</strong> olur. Gecikmesinde sakınca bulunan hallerde, kanunla yetkilendirilmiş merciin yazılı emriyle geçici olarak faaliyetler durdurulabilir. Bu emir, <strong>en geç yirmidört saat içinde görevli hâkimin onayına sunulur</strong>. Hâkim, bu onay talebini <strong>en geç kırksekiz saat içinde karara bağlar</strong>.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Tıpkı basın gibi, dernek kurmak da "izin" sistemine değil, "bildirim" sistemine tabidir. Yani bir dernek kurmak için devletten izin almazsınız; kurarsınız ve gerekli belgeleri ilgili makama (Valilik) bildirirsiniz.</p>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Derneklerin Faaliyetten Meni ve "24/48 Kuralı"</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu kural artık tanıdık gelmeli! Bir derneğin kapatılması için ana kural hâkim kararıdır. Ancak istisnai ve acil durumlarda, kanunla yetkilendirilmiş bir idari merci (örn: Vali) derneği geçici olarak faaliyetten men edebilir. Bu durumda idari karar, 24 saat içinde hâkime sunulur ve hâkim 48 saat içinde onaylamazsa yasaklama kararı kalkar. Bu, Anayasa'nın idari keyfiliği önlemek için koyduğu önemli bir güvencedir.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 34 -->
+    <details id="madde-34" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 34 – Toplantı ve Gösteri Yürüyüşü Düzenleme Hakkı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>silahsız</strong> ve <strong>barışçıl</strong> şekilde toplantı ve gösteri yürüyüşü düzenleme hakkına sahiptir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Toplantı ve gösteri yürüyüşlerine ilişkin usul, kanunla düzenlenir. Bu faaliyetler, <strong>millî güvenlik</strong>, <strong>kamu düzeni</strong>, <strong>kamu sağlığı</strong>, <strong>genel ahlak</strong> veya <strong>başkalarının hakları</strong> gibi sebeplerle sınırlanabilir.
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Hakkın Kullanımının 3 Temel Şartı</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu hakkın Anayasal güvence altında kullanılabilmesi için üç temel şart vardır. Sınavda bu şartlar doğrudan sorulabilir:</p>
+                <ol class="list-decimal pl-5 text-sm space-y-2">
+                    <li><strong>Önceden İzin Almama:</strong> Tıpkı dernek kurmak gibi, bu hak da "bildirim" esasına dayanır. Yetkili makama (Valilik/Kaymakamlık) sadece düzenleme kurulu hakkında bilgi verilir.</li>
+                    <li><strong>Silahsız Olma:</strong> Toplantıya katılanların ateşli silah, patlayıcı madde, kesici/delici alet vb. taşımaması gerekir.</li>
+                    <li><strong>Saldırısız Olma:</strong> Toplantının barışçıl bir amaç ve yöntemle yapılması, şiddete başvurulmaması esastır.</li>
+                </ol>
+            </div>
+        </div>
+    </details>
+</section>
                 
             </article>
         </div>
