--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -615,7 +615,7 @@
         </div>
     </details>
 </section>
-                <!-- İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri -->
+<!-- İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri -->
 <section aria-labelledby="bolum-kisinin-haklari">
     <h3 id="bolum-kisinin-haklari" class="subsection-title text-2xl font-bold mt-12 mb-4">
         İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri
@@ -623,7 +623,9 @@
     <p class="text-slate-600 mb-6" style="text-align: justify;">
         Bu bölümde yer alan haklar, bireyi devlete ve topluma karşı koruyan, devletin müdahale edemeyeceği özel alanı çizen haklardır. "Koruyucu Haklar" olarak da bilinirler. Devletin bu haklara karşı temel görevi "gölge etmemek", yani dokunmamaktır.
     </p>
-</section>
+
+    <!-- I. Kişinin dokunulmazlığı, maddi ve manevi varlığı -->
+    <h4 class="font-bold text-lg mt-8 mb-4 text-slate-700">I. Kişinin dokunulmazlığı, maddi ve manevi varlığı</h4>
 
     <!-- Madde 17 -->
     <details id="madde-17" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -632,31 +634,32 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, <strong>doğal yaşam hakkı</strong>na sahiptir. Bu hakkın kullanılması, ancak kanunla belirlenen hallerde ve şekilde kısıtlanabilir.
+                Herkes, yaşama, maddi ve manevi varlığını koruma ve geliştirme hakkına sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Kimseye <strong>işkence ve eziyet yapılamaz;</strong> kimse insan haysiyetiyle bağdaşmayan bir cezaya veya muameleye tabi tutulamaz.
+                Tıbbi zorunluluklar ve kanunda yazılı haller dışında, kişinin vücut bütünlüğüne dokunulamaz; rızası olmadan bilimsel ve tıbbi deneylere tabi tutulamaz.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                <strong>Meşru müdafaa hali, yakalama ve tutuklama kararlarının yerine getirilmesi, bir tutuklu veya hükümlünün kaçmasının önlenmesi, bir ayaklanma veya isyanın bastırılması veya olağanüstü hallerde yetkili merciin verdiği emirlerin uygulanması sırasında silah kullanılmasına kanunun cevaz verdiği zorunlu durumlarda</strong> meydana gelen öldürme fiilleri, birinci fıkra hükmü dışındadır.
+                Kimseye işkence ve eziyet yapılamaz; kimse insan haysiyetiyle bağdaşmayan bir cezaya veya muameleye tabi tutulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Meşru müdafaa hali, yakalama ve tutuklama kararlarının yerine getirilmesi, bir tutuklu veya hükümlünün kaçmasının önlenmesi, bir ayaklanma veya isyanın bastırılması veya olağanüstü hallerde yetkili merciin verdiği emirlerin uygulanması sırasında silah kullanılmasına kanunun cevaz verdiği zorunlu durumlarda meydana gelen öldürme fiilleri, birinci fıkra hükmü dışındadır.
             </blockquote>
             <div class="strategy-box mt-4">
-                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Yaşama Hakkının İstisnaları</h6>
-                <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda "Aşağıdakilerden hangisi yaşama hakkının istisnalarından biri değildir?" sorusu sıkça gelir. Anayasa'ya göre bu istisnalar şunlardır:</p>
-                <ul class="list-disc pl-5 text-sm space-y-1">
-                    <li><strong>Meşru müdafaa</strong></li>
-                    <li><strong>Yakalama ve tutuklama kararlarını uygulama</strong></li>
-                    <li><strong>Bir hükümlü veya tutuklunun kaçmasını önleme</strong></li>
-                    <li><strong>Bir ayaklanma veya isyanı bastırma</strong></li>
-                    <li><strong>Olağanüstü hallerde verilen emirleri uygulama</strong></li>
-                </ul>
-                <p class="text-sm mt-2" style="text-align: justify;"><strong>❗ Dikkat:</strong> Bu fiillerin "kanunun cevaz verdiği zorunlu durumlarda" olması şarttır. Aksi halde haksız fiil olur.</p>
-            </div>
-            <div class="highlight-box mt-4">
-                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> "Yaşama hakkı" doğrudan bir hakkın yanı sıra, "işkence yasağı" ve "insanlık dışı muamele" gibi negatif hakları da kapsar. Bu madde, <strong>insanın fiziksel bütünlüğünün</strong> devlet tarafından korunmasını garanti eder. Sınavda "işkence" ile "meşru müdafaa" arasındaki fark sorgulanabilir.</p>
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Maddenin 4 Temel Güvencesi</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu madde, yaşama hakkı dışında, sınavda ayrı ayrı sorulabilecek 4 temel güvence daha içerir:</p>
+                <ol class="list-decimal pl-5 text-sm space-y-2">
+                    <li><strong>Yaşama Hakkı ve İstisnaları:</strong> En temel haktır. İstisnaları (meşru müdafaa, yakalama, kaçmayı önleme, isyanı bastırma, olağanüstü halde emir uygulama) ezbere bilinmelidir.</li>
+                    <li><strong>Vücut Bütünlüğü:</strong> Kural olarak dokunulamaz. Sadece "tıbbi zorunluluklar" ve "kanunda yazılı haller" istisnadır. Rızası olmadan bilimsel ve tıbbi deneylere tabi tutulması kesinlikle yasaktır.</li>
+                    <li><strong>İşkence ve Eziyet Yasağı:</strong> Bu yasak mutlaktır. Hiçbir istisnası yoktur.</li>
+                    <li><strong>İnsan Haysiyetiyle Bağdaşmayan Ceza ve Muamele Yasağı:</strong> Bu da işkence yasağı gibi mutlak bir yasaktır.</li>
+                </ol>
             </div>
         </div>
     </details>
+
+    <!-- II. Zorla çalıştırma yasağı -->
+    <h4 class="font-bold text-lg mt-8 mb-4 text-slate-700">II. Zorla çalıştırma yasağı</h4>
 
     <!-- Madde 18 -->
     <details id="madde-18" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -665,7 +668,10 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Hiç kimse zorla çalıştırılamaz. <strong>Angarya yasaktır.</strong>
+                Hiç kimse zorla çalıştırılamaz. Angarya yasaktır.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Şekil ve şartları kanunla düzenlenmek üzere hükümlülük veya tutukluluk süreleri içindeki çalıştırmalar; olağanüstü hallerde vatandaşlardan istenecek hizmetler; ülke ihtiyaçlarının zorunlu kıldığı alanlarda öngörülen vatandaşlık ödevi niteliğindeki beden ve fikir çalışmaları, zorla çalıştırma sayılmaz.
             </blockquote>
             <div class="highlight-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu (Angarya Nedir?)</h6>
@@ -673,16 +679,18 @@
             </div>
             <div class="strategy-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Zorla Çalıştırma Sayılmayan Haller</h6>
-                <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda en çok bu istisnalar sorulur. Aşağıdakiler <strong>angarya veya zorla çalıştırma değildir</strong>:</p>
+                <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda en çok bu istisnalar sorulur. Aşağıdakiler angarya veya zorla çalıştırma değildir:</p>
                 <ul class="list-disc pl-5 text-sm space-y-1">
                     <li><strong>Hükümlü ve tutukluların (kanun çerçevesinde) çalıştırılması.</strong></li>
                     <li><strong>Olağanüstü hallerde (deprem, sel, savaş vb.) istenen hizmetler.</strong></li>
                     <li><strong>Vatandaşlık ödevi niteliğindeki çalışmalar.</strong></li>
                 </ul>
-                <p class="text-sm mt-2" style="text-align: justify;"><strong>📌 Örnek:</strong> Askerlik, afet sırasında yardım etme, mahkumların çalıştırılması bu kapsamdadır.</p>
             </div>
         </div>
     </details>
+
+    <!-- III. Kişi hürriyeti ve güvenliği -->
+    <h4 class="font-bold text-lg mt-8 mb-4 text-slate-700">III. Kişi hürriyeti ve güvenliği</h4>
 
     <!-- Madde 19 -->
     <details id="madde-19" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -691,38 +699,49 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                <strong>Kimsenin hürriyeti ve güvenliği, kanunla belirtilen haller ve usul dışında sınırlandırılamaz.</strong>
+                Herkes, kişi hürriyeti ve güvenliğine sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Hürriyeti kısıtlayıcı her nevi tedbir, ancak suç işlenmesini önlemek veya bir suça karışan kimsenin yakalanmasını sağlamak maksadıyla ve suçun niteliğine göre, yalnız kanunla belirtilen sürelerle ve şartlarla uygulanabilir.
+                Şekil ve şartları kanunda gösterilen:
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                <strong>Yakalanan veya tutuklanan kişi, en geç kırksekiz saat içinde hâkimin huzuruna çıkarılır.</strong> Bu süre, olay yerinden en yakın mahkemeye getirilmesi için gereken zorunlu yol süresiyle uzatılır.
+                Mahkemelerce verilmiş hürriyeti kısıtlayıcı cezaların ve güvenlik tedbirlerinin yerine getirilmesi; bir mahkeme kararının veya kanunda öngörülen bir yükümlülüğün gereği olarak ilgilinin yakalanması veya tutuklanması; bir küçüğün gözetim altında ıslahı veya yetkili merci önüne çıkarılması için verilen bir kararın yerine getirilmesi; toplum için tehlike teşkil eden bir akıl hastası, uyuşturucu madde veya alkol tutkunu, bir serseri veya hastalık yayabilecek bir kişinin bir müessesede tedavi, eğitim veya ıslahı için kanunda belirtilen esaslara uygun olarak alınan tedbirin yerine getirilmesi; usulüne aykırı şekilde ülkeye girmek isteyen veya giren, ya da hakkında sınır dışı etme yahut geri verme kararı verilen bir kişinin yakalanması veya tutuklanması; halleri dışında kimse hürriyetinden yoksun bırakılamaz.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                <strong>Toplu suçlara katılanlar hakkında, bu süre dört güne kadar uzatılabilir.</strong>
+                Suçluluğu hakkında kuvvetli belirti bulunan kişiler, ancak kaçmalarını, delillerin yokedilmesini veya değiştirilmesini önlemek maksadıyla veya bunlar gibi tutuklamayı zorunlu kılan ve kanunda gösterilen diğer hallerde hâkim kararıyla tutuklanabilir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Hâkim, kişinin tutuklanmasına veya serbest bırakılmasına karar verir. Bu karar, derhal ve gecikmeksizin ilgiliye ve avukatına bildirilir.
+                Hâkim kararı olmadan yakalama, ancak suçüstü halinde veya gecikmesinde sakınca bulunan hallerde yapılabilir; bunun şartlarını kanun gösterir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Mahkemelerce verilmiş hürriyeti kısıtlayıcı cezaların ve güvenlik tedbirlerinin yerine getirilmesi;
+                Yakalanan veya tutuklanan kişilere, yakalama veya tutuklama sebepleri ve haklarındaki iddialar herhalde yazılı ve bunun hemen mümkün olmaması halinde sözlü olarak derhal, toplu suçlarda en geç hâkim huzuruna çıkarılıncaya kadar bildirilir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                bir mahkeme kararının veya kanunda öngörülen bir yükümlülüğün gereği olarak ilgilinin yakalanması veya tutuklanması;
+                Yakalanan veya tutuklanan kişi, tutulma yerine en yakın mahkemeye gönderilmesi için gerekli süre hariç en geç kırksekiz saat ve toplu olarak işlenen suçlarda en çok dört gün içinde hâkim önüne çıkarılır. Kimse, bu süreler geçtikten sonra hâkim kararı olmaksızın hürriyetinden yoksun bırakılamaz. Bu süreler olağanüstü hal ve savaş hallerinde uzatılabilir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                bir küçüğün gözetim altında ıslahı veya yetkili merci önüne çıkarılması için verilen bir kararın yerine getirilmesi;
+                Kişinin yakalandığı veya tutuklandığı, yakınlarına derhal bildirilir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                toplum için tehlike teşkil eden bir akıl hastası, uyuşturucu madde veya alkol tutkunu, bir serseri veya hastalık yayabilecek bir kişinin bir müessesede tedavi, eğitim veya ıslahı için kanunda belirtilen esaslara uygun olarak alınan tedbirin yerine getirilmesi;
+                Tutuklanan kişilerin, makul süre içinde yargılanmayı ve soruşturma veya kovuşturma sırasında serbest bırakılmayı isteme hakları vardır. Serbest bırakılma ilgilinin yargılama süresince duruşmada hazır bulunmasını veya hükmün yerine getirilmesini sağlamak için bir güvenceye bağlanabilir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                usulüne aykırı şekilde ülkeye girmek isteyen veya giren, ya da hakkında sınır dışı etme yahut geri verme kararı verilen bir kişinin yakalanması veya tutuklanması;
+                Her ne sebeple olursa olsun, hürriyeti kısıtlanan kişi, kısa sürede durumu hakkında karar verilmesini ve bu kısıtlamanın kanuna aykırılığı halinde hemen serbest bırakılmasını sağlamak amacıyla yetkili bir yargı merciine başvurma hakkına sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                halleri dışında kimse hürriyetinden yoksun bırakılamaz.
+                Bu esaslar dışında bir işleme tâbi tutulan kişilerin uğradıkları zarar, tazminat hukukunun genel prensiplerine göre, Devletçe ödenir.
             </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Kişi Hürriyetinin Sınırlandırılabileceği Haller</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda, "Aşağıdakilerden hangisi Anayasa'ya göre kişi hürriyetinin kısıtlanabileceği durumlardan biri değildir?" sorusu sıkça gelir. Metindeki uzun liste 5 ana başlıkta toplanabilir:</p>
+                <ol class="list-decimal pl-5 text-sm space-y-2">
+                    <li><strong>Mahkeme Kararlarının Uygulanması:</strong> Verilmiş hapis cezaları ve güvenlik tedbirleri.</li>
+                    <li><strong>Yargısal Süreçler:</strong> Bir mahkeme kararı veya kanuni zorunlulukla yakalama/tutuklama.</li>
+                    <li><strong>Koruma ve Gözetim Amaçlı:</strong> Bir küçüğün ıslahı.</li>
+                    <li><strong>Toplum Sağlığı ve Güvenliği:</strong> Akıl hastası, uyuşturucu/alkol bağımlısı, serseri veya bulaşıcı hastalık taşıyan kişilerin tedavi/ıslahı.</li>
+                    <li><strong>Yabancılar Hukuku:</strong> Ülkeye usulsüz giren veya hakkında sınır dışı/iade kararı verilenlerin yakalanması.</li>
+                </ol>
+            </div>
             <div class="strategy-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Gözaltı Süreleri</h6>
                 <p style="text-align: justify;" class="text-sm mb-3">Bu uzun maddedeki en net ve en çok sorulan bilgi, gözaltı süreleridir. Unutmayın:</p>
@@ -740,14 +759,16 @@
                         </div>
                     </li>
                 </ul>
-                <p class="text-sm mt-2" style="text-align: justify;"><strong>📌 Not:</strong> Bu sürelere, kişinin en yakın mahkemeye gönderilmesi için gereken <strong>"zorunlu yol süresi"</strong> dahil değildir. Yani, 48 saat + yol süresi.</p>
+                <p class="text-sm mt-2" style="text-align: justify;"><strong>📌 Not:</strong> Bu sürelere, kişinin en yakın mahkemeye gönderilmesi için gereken <strong>"zorunlu yol süresi"</strong> dahil değildir.</p>
             </div>
-            <div class="warning-box mt-4">
-                <p style="text-align: justify;"><strong>⚠️ Karıştırılmaması Gerekenler:</strong></p>
-                <ul class="list-disc pl-5 text-sm mt-2">
-                    <li><strong>48 saat</strong> → Yakalama sonrası hâkim önüne çıkarılma süresi.</li>
-                    <li><strong>24 saat</strong> → Adli kontrol tedbirlerinin uygulanması için savcının süresi (Ceza Muhakemesi Kanunu).</li>
-                    <li><strong>8 saat</strong> → Suçüstü yakalamada ifade alma süresi.</li>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Diğer Önemli Güvenceler</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu madde sadece süreleri değil, başka önemli güvenceleri de içerir:</p>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li><strong>Derhal Bilgilendirme:</strong> Yakalanan kişiye haklarının derhal bildirilmesi zorunludur.</li>
+                    <li><strong>Yakınlara Bildirim:</strong> Yakalanan veya tutuklanan kişinin durumu yakınlarına derhal bildirilmelidir.</li>
+                    <li><strong>Yargıya Başvurma Hakkı:</strong> Hürriyeti kısıtlanan kişi, bu işleme karşı yargı merciine başvurma hakkına sahiptir.</li>
+                    <li><strong>Tazminat Hakkı:</strong> Haksız yere hürriyeti kısıtlanan kişilerin zararını Devlet öder.</li>
                 </ul>
             </div>
         </div>
