--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -624,9 +624,6 @@
         Bu bölümde yer alan haklar, bireyi devlete ve topluma karşı koruyan, devletin müdahale edemeyeceği özel alanı çizen haklardır. "Koruyucu Haklar" olarak da bilinirler. Devletin bu haklara karşı temel görevi "gölge etmemek", yani dokunmamaktır.
     </p>
 
-    <!-- I. Kişinin dokunulmazlığı, maddi ve manevi varlığı -->
-    <h4 class="font-bold text-lg mt-8 mb-4 text-slate-700">I. Kişinin dokunulmazlığı, maddi ve manevi varlığı</h4>
-
     <!-- Madde 17 -->
     <details id="madde-17" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
         <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
@@ -634,13 +631,13 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, yaşama, maddi ve manevi varlığını koruma ve geliştirme hakkına sahiptir.
+                Herkes, <strong>yaşama, maddi ve manevi varlığını koruma ve geliştirme hakkına</strong> sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Tıbbi zorunluluklar ve kanunda yazılı haller dışında, kişinin vücut bütünlüğüne dokunulamaz; rızası olmadan bilimsel ve tıbbi deneylere tabi tutulamaz.
+                <strong>Tıbbi zorunluluklar ve kanunda yazılı haller dışında</strong>, kişinin vücut bütünlüğüne dokunulamaz; rızası olmadan bilimsel ve tıbbi deneylere tabi tutulamaz.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Kimseye işkence ve eziyet yapılamaz; kimse insan haysiyetiyle bağdaşmayan bir cezaya veya muameleye tabi tutulamaz.
+                Kimseye <strong>işkence ve eziyet yapılamaz</strong>; kimse <strong>insan haysiyetiyle bağdaşmayan bir cezaya veya muameleye tabi tutulamaz</strong>.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
                 Meşru müdafaa hali, yakalama ve tutuklama kararlarının yerine getirilmesi, bir tutuklu veya hükümlünün kaçmasının önlenmesi, bir ayaklanma veya isyanın bastırılması veya olağanüstü hallerde yetkili merciin verdiği emirlerin uygulanması sırasında silah kullanılmasına kanunun cevaz verdiği zorunlu durumlarda meydana gelen öldürme fiilleri, birinci fıkra hükmü dışındadır.
@@ -658,9 +655,6 @@
         </div>
     </details>
 
-    <!-- II. Zorla çalıştırma yasağı -->
-    <h4 class="font-bold text-lg mt-8 mb-4 text-slate-700">II. Zorla çalıştırma yasağı</h4>
-
     <!-- Madde 18 -->
     <details id="madde-18" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
         <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
@@ -668,10 +662,10 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Hiç kimse zorla çalıştırılamaz. Angarya yasaktır.
+                Hiç kimse <strong>zorla çalıştırılamaz</strong>. <strong>Angarya yasaktır</strong>.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Şekil ve şartları kanunla düzenlenmek üzere hükümlülük veya tutukluluk süreleri içindeki çalıştırmalar; olağanüstü hallerde vatandaşlardan istenecek hizmetler; ülke ihtiyaçlarının zorunlu kıldığı alanlarda öngörülen vatandaşlık ödevi niteliğindeki beden ve fikir çalışmaları, zorla çalıştırma sayılmaz.
+                Şekil ve şartları kanunla düzenlenmek üzere hükümlülük veya tutukluluk süreleri içindeki çalıştırmalar; olağanüstü hallerde vatandaşlardan istenecek hizmetler; ülke ihtiyaçlarının zorunlu kıldığı alanlarda öngörülen vatandaşlık ödevi niteliğindeki beden ve fikir çalışmaları, <strong>zorla çalıştırma sayılmaz</strong>.
             </blockquote>
             <div class="highlight-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu (Angarya Nedir?)</h6>
@@ -689,9 +683,6 @@
         </div>
     </details>
 
-    <!-- III. Kişi hürriyeti ve güvenliği -->
-    <h4 class="font-bold text-lg mt-8 mb-4 text-slate-700">III. Kişi hürriyeti ve güvenliği</h4>
-
     <!-- Madde 19 -->
     <details id="madde-19" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
         <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
@@ -699,7 +690,7 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, kişi hürriyeti ve güvenliğine sahiptir.
+                Herkes, <strong>kişi hürriyeti ve güvenliğine</strong> sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
                 Şekil ve şartları kanunda gösterilen:
@@ -708,19 +699,19 @@
                 Mahkemelerce verilmiş hürriyeti kısıtlayıcı cezaların ve güvenlik tedbirlerinin yerine getirilmesi; bir mahkeme kararının veya kanunda öngörülen bir yükümlülüğün gereği olarak ilgilinin yakalanması veya tutuklanması; bir küçüğün gözetim altında ıslahı veya yetkili merci önüne çıkarılması için verilen bir kararın yerine getirilmesi; toplum için tehlike teşkil eden bir akıl hastası, uyuşturucu madde veya alkol tutkunu, bir serseri veya hastalık yayabilecek bir kişinin bir müessesede tedavi, eğitim veya ıslahı için kanunda belirtilen esaslara uygun olarak alınan tedbirin yerine getirilmesi; usulüne aykırı şekilde ülkeye girmek isteyen veya giren, ya da hakkında sınır dışı etme yahut geri verme kararı verilen bir kişinin yakalanması veya tutuklanması; halleri dışında kimse hürriyetinden yoksun bırakılamaz.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Suçluluğu hakkında kuvvetli belirti bulunan kişiler, ancak kaçmalarını, delillerin yokedilmesini veya değiştirilmesini önlemek maksadıyla veya bunlar gibi tutuklamayı zorunlu kılan ve kanunda gösterilen diğer hallerde hâkim kararıyla tutuklanabilir.
+                Suçluluğu hakkında kuvvetli belirti bulunan kişiler, ancak kaçmalarını, delillerin yokedilmesini veya değiştirilmesini önlemek maksadıyla veya bunlar gibi tutuklamayı zorunlu kılan ve kanunda gösterilen diğer hallerde <strong>hâkim kararıyla tutuklanabilir</strong>.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Hâkim kararı olmadan yakalama, ancak suçüstü halinde veya gecikmesinde sakınca bulunan hallerde yapılabilir; bunun şartlarını kanun gösterir.
+                <strong>Hâkim kararı olmadan yakalama</strong>, ancak suçüstü halinde veya gecikmesinde sakınca bulunan hallerde yapılabilir; bunun şartlarını kanun gösterir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
                 Yakalanan veya tutuklanan kişilere, yakalama veya tutuklama sebepleri ve haklarındaki iddialar herhalde yazılı ve bunun hemen mümkün olmaması halinde sözlü olarak derhal, toplu suçlarda en geç hâkim huzuruna çıkarılıncaya kadar bildirilir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Yakalanan veya tutuklanan kişi, tutulma yerine en yakın mahkemeye gönderilmesi için gerekli süre hariç en geç kırksekiz saat ve toplu olarak işlenen suçlarda en çok dört gün içinde hâkim önüne çıkarılır. Kimse, bu süreler geçtikten sonra hâkim kararı olmaksızın hürriyetinden yoksun bırakılamaz. Bu süreler olağanüstü hal ve savaş hallerinde uzatılabilir.
+                Yakalanan veya tutuklanan kişi, tutulma yerine en yakın mahkemeye gönderilmesi için gerekli süre hariç en geç <strong>kırksekiz saat</strong> ve toplu olarak işlenen suçlarda en çok <strong>dört gün içinde hâkim önüne çıkarılır</strong>. Kimse, bu süreler geçtikten sonra hâkim kararı olmaksızın hürriyetinden yoksun bırakılamaz. Bu süreler olağanüstü hal ve savaş hallerinde uzatılabilir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Kişinin yakalandığı veya tutuklandığı, yakınlarına derhal bildirilir.
+                Kişinin yakalandığı veya tutuklandığı, <strong>yakınlarına derhal bildirilir</strong>.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
                 Tutuklanan kişilerin, makul süre içinde yargılanmayı ve soruşturma veya kovuşturma sırasında serbest bırakılmayı isteme hakları vardır. Serbest bırakılma ilgilinin yargılama süresince duruşmada hazır bulunmasını veya hükmün yerine getirilmesini sağlamak için bir güvenceye bağlanabilir.
